WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242538
[JSC] JSFunction::reifyName should throw an OutOfMemoryError when reifying a too long string
https://bugs.webkit.org/show_bug.cgi?id=242538
Summary
[JSC] JSFunction::reifyName should throw an OutOfMemoryError when reifying a ...
Yijia Huang
Reported
2022-07-08 15:05:13 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Yijia Huang
Comment 1
2022-07-08 15:08:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2240
Yijia Huang
Comment 2
2022-07-08 15:16:57 PDT
<
rdar://93370041
>
EWS
Comment 3
2022-07-11 22:51:51 PDT
Committed
252370@main
(16092172d5d3): <
https://commits.webkit.org/252370@main
> Reviewed commits have been landed. Closing PR #2240 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug