[JSC] JSFunction::reifyName should throw an OutOfMemoryError when reifying a too long string https://bugs.webkit.org/show_bug.cgi?id=242538

Reviewed by Mark Lam.

JSFunction::reifyName should call WTF::tryMakeString instead of WTF::makeString
because the resultant name string may be too long and cannot be reified. In such
a case, it should throw an OutOfMemoryError.

* Source/JavaScriptCore/runtime/JSFunction.cpp:
(JSC::JSFunction::setFunctionName):
(JSC::JSFunction::reifyName):
(JSC::JSFunction::reifyLazyNameIfNeeded):
(JSC::JSFunction::reifyLazyBoundNameIfNeeded):

Canonical link: https://commits.webkit.org/252370@main